# fastapi

./: pyproject.toml
